--- a/countdown.html
+++ b/countdown.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF8">
@@ -6,5 +5,8 @@
   </head>
   <body>
     <p>Hello world</p>
+    <div id="count"></div>
+    <button id="start">Start</button>
+    <script>require('./renderer')</script>
   </body>
 </html>
